cmake_minimum_required(VERSION 3.14)
project(src C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(src
        alter.c
        analyze.c
        attach.c
        auth.c
        backup.c
        bitvec.c
        btmutex.c
        btree.c
        btree.h
        btreeInt.h
        build.c
        callback.c
        complete.c
        ctime.c
        date.c
        dbpage.c
        dbstat.c
        delete.c
        expr.c
        fault.c
        fkey.c
        func.c
        global.c
        hash.c
        hash.h
        hwtime.h
        insert.c
        legacy.c
        loadext.c
        main.c
        malloc.c
        mem0.c
        mem1.c
        mem2.c
        mem3.c
        mem5.c
        memdb.c
        memjournal.c
        msvc.h
        mutex.c
        mutex.h
        mutex_noop.c
        mutex_unix.c
        mutex_w32.c
        notify.c
        os.c
        os.h
        os_common.h
        os_setup.h
        os_unix.c
        os_win.c
        os_win.h
        pager.c
        pager.h
        pcache.c
        pcache.h
        pcache1.c
        pragma.c
        pragma.h
        prepare.c
        printf.c
        random.c
        resolve.c
        rowset.c
        select.c
        sqlite3ext.h
        sqliteInt.h
        sqliteLimit.h
        status.c
        table.c
        tclsqlite.c
        test1.c
        test2.c
        test3.c
        test4.c
        test5.c
        test6.c
        test7.c
        test8.c
        test9.c
        test_async.c
        test_autoext.c
        test_backup.c
        test_bestindex.c
        test_blob.c
        test_btree.c
        test_config.c
        test_delete.c
        test_demovfs.c
        test_devsym.c
        test_fs.c
        test_func.c
        test_hexio.c
        test_init.c
        test_intarray.c
        test_intarray.h
        test_journal.c
        test_loadext.c
        test_malloc.c
        test_md5.c
        test_multiplex.c
        test_multiplex.h
        test_mutex.c
        test_onefile.c
        test_osinst.c
        test_pcache.c
        test_quota.c
        test_quota.h
        test_rtree.c
        test_schema.c
        test_server.c
        test_sqllog.c
        test_superlock.c
        test_syscall.c
        test_tclsh.c
        test_tclvar.c
        test_thread.c
        test_vdbecov.c
        test_vfs.c
        test_vfstrace.c
        test_windirent.c
        test_windirent.h
        test_window.c
        test_wsd.c
        threads.c
        tokenize.c
        treeview.c
        trigger.c
        update.c
        upsert.c
        utf.c
        util.c
        vacuum.c
        vdbe.c
        vdbe.h
        vdbeapi.c
        vdbeaux.c
        vdbeblob.c
        vdbeInt.h
        vdbemem.c
        vdbesort.c
        vdbetrace.c
        vtab.c
        vxworks.h
        wal.c
        wal.h
        walker.c
        where.c
        wherecode.c
        whereexpr.c
        whereInt.h
        window.c)
